Added type to triggers for 'up' and 'down'. Meaning onkeyup and onkeydown. Default is 'up'

--- a/src/demo1.html
+++ b/src/demo1.html
@@ -30,11 +30,11 @@
             // the fake directory listing
             var directoryStructure =
             {
-                'c:': ['inetpub', 'Users', 'Temp', 'Windows'],
-                'c:\\inetpub': ['wwwroot'],
-                'c:\\users': ['jdoe', 'jsmith'],
-                'c:\\temp': ['logs'],
-                'c:\\windows': ['System', 'System32', 'SYSWOW64']
+                'c:\\': ['inetpub', 'Users', 'Temp', 'Windows'],
+                'c:\\inetpub\\': ['wwwroot'],
+                'c:\\users\\': ['jdoe', 'jsmith'],
+                'c:\\temp\\': ['logs'],
+                'c:\\windows\\': ['System', 'System32', 'SYSWOW64']
             };
 
             // add trigger when the user presses the `\` key
